<resources>
    <string name="app_name">Asobi</string>
    <string name="Main_Activity">com.example.iths.asobi.MainActivity</string>
    <string name="play">Play</string>
    <string name="high_scores">High scores</string>
    <string name="create_player">Create Player</string>
    <string name="info">INFO</string>
    <string name="hidden">Profile</string>
    <string name="category">Category: </string>
    <string name="replay">Replay</string>
    <string name="return_to_main_menu">Return to main menu</string>
    <string name="see_high_score">See High Score</string>
    <string name="show_category">Category:</string>
    <string name="to_high_score_button">Go to see the high score</string>
    <string name="replay_button">Replay</string>
    <string name="return_button">Return to main menu</string>
    <string name="question_title">Question:</string>
    <string name="answers_title">Answers:</string>
    <string name="alternative_1">Alternative One</string>
    <string name="alternative_2">Alternative two</string>
    <string name="alternative_3">Alternative three</string>
    <string name="alternative_4">Alternative four</string>
    <string name="type_your_question_here">Type your question here!</string>
    <string name="right_answer">Right answer:</string>
    <string name="right_answer_int">Which alternative is the right one</string>
    <string name="add_button_text">Add</string>
    <string name="hint_text"><![CDATA[Which of the answers above is the right one. \nPlease right down the number of the answer below]]></string>
    <string name="custom_categories">Categories</string>
    <string name="hint_button_A">A</string>
    <string name="hint_button_B">B</string>
    <string name="hint_button_C">C</string>
    <string name="hint_button_D">D</string>
    <string name="score_title">Score:</string>
    <string name="zero_score_hint">0</string>
    <string name="question_hint">Questions shows up here</string>
    <string name="timer_text">--</string>
    <string name="category_hint">—</string>
    <string name="about_title">About the Asobi Team</string>
    <string name="about_paragraf1">The Asobi team is a group of 5 people who had the dreams and passion to create an outstanding game!</string>
    <string name="about_paragraf2">With a tight budget and not much time we accomplished the impossible.</string>
    <string name="about_paragraf3">The name of the programmers can be found below:</string>
    <string name="Gattanjo_Nilsson">Gattanjo Nilsson</string>
    <string name="Kozue_Wendén">Kozue Wendén</string>
    <string name="Oleg_Lindvin">Oleg \nLindvin</string>
    <string name="Pontus_Hanzén">Pontus Hanzén</string>
    <string name="Thomas_Månsson">Thomas Månsson</string>
    <string name="category_text">Category:</string>
    <string name="typ_category">Type questions category!</string>
    <string name="you_can_not_be_ranked">You can not be ranked!</string>
    <string name="this_name_already_exists">This name already exists.</string>
    <string name="delete">Delete</string>
    <string name="do_you_want_to_delete">Do you want to delete?</string>
    <string name="cancel">Cancel</string>
    <string name="total_score">Total score: %1$s</string>
    <string name="you_are_rank">You are %1$sth</string>
    <string name="correct_answers">Correct answers: %1$s</string>
    <string name="minutes_seconds"><![CDATA[Time: %1$s min & %2$d sec]]></string>
    <string name="you_placed_xst_place_on_high_score">You placed %1$sst place in %2$s</string>
    <string name="you_placed_xnd_place_on_high_score">You placed %1$snd place in %2$s</string>
    <string name="you_placed_xrd_place_on_high_score">You placed %1$srd place in %2$s</string>
    <string name="you_placed_xth_place_on_high_score">You placed %1$sth place in %2$s</string>
    <string name="category_already_exists">%1$s already exists.</string>
    <string name="category_added">Category added!</string>
    <string name="question_added">Question added!</string>
    <string name="you_need_at_least_five_questions">You need at least 5 questions in this category!</string>
    <string name="paragraf1">This is where you add your own categories. To start with they will be empty</string>
    <string name="all_questions">All Questions</string>
    <string name="name_of_category">Name of category</string>
    <string name="add_category">ADD CATEGORY</string>
    <string name="add_custom_question">Add Custom Question</string>
    <string name="add_custom_category">Add custom Category!</string>
    <string name="all">All</string>
    <string name="name">Name</string>
    <string name="add_profile">ADD PROFILE</string>
    <string name="rank">Rank</string>
    <string name="score">Score</string>
    <string name="question">Question: </string>
    <string name="answers">Answers: </string>
    <string name="answer_1">Answer 1</string>
    <string name="answer_2">Answer 2</string>
    <string name="answer_3">Answer 3</string>
    <string name="answer_4">Answer 4</string>
    <string name="profile_created">Profile created.</string>
    <string name="profile_item">PROFILE</string>
    <string name="round">Round:</string>
    <string name="one">1</string>
    <string name="category_message"><![CDATA[This is where you add your own categories. \nTo start with they will be empty]]></string>
    <string name="hint_right_answer">Number of right answer</string>
    <string name="question_sports_1">Which sports is the most popular sport in Sweden?</string>
    <string name="sports_answer_1_1">Tennis</string>
    <string name="sports_answer_1_2">Soccer</string>
    <string name="sports_answer_1_3">Ice hockey</string>
    <string name="sports_answer_1_4">Bandy</string>
    <string name="sports_correct_answer_1">2</string>
    <string name="question_sports_2">Who won The World Highland Games Championships a record six times?</string>
    <string name="sports_answer_2_1">Geoff Capes</string>
    <string name="sports_answer_2_2">Ben Affleck</string>
    <string name="sports_answer_2_3">Jonathan Summers</string>
    <string name="sports_answer_2_4">Dick Johnsson</string>
    <string name="sports_correct_answer_2">1</string>
    <string name="question_sports_3">What jobs did Mike ‘Fluff’ Cowan, Jim ‘Bones’ Mackay and Fanny Sunesson do?</string>
    <string name="sports_answer_3_1">Coaches</string>
    <string name="sports_answer_3_2">Golf caddies</string>
    <string name="sports_answer_3_3">Equipment manager</string>
    <string name="sports_answer_3_4">Doctors</string>
    <string name="sports_correct_answer_3">2</string>
    <string name="question_sports_4">Which former rugby player once called the English RFU committee \'Old Farts\'?</string>
    <string name="sports_answer_4_1">Ben Thompsson</string>
    <string name="sports_answer_4_2">Jay Chris</string>
    <string name="sports_answer_4_3">Will Carling</string>
    <string name="sports_answer_4_4">John Smith</string>
    <string name="sports_correct_answer_4">3</string>
    <string name="question_sports_5">In inches, how big is the diameter of a basketball hoop?</string>
    <string name="sports_answer_5_1">11</string>
    <string name="sports_answer_5_2">13</string>
    <string name="sports_answer_5_3">16</string>
    <string name="sports_answer_5_4">18</string>
    <string name="sports_correct_answer_5">4</string>
    <string name="question_sports_6">What is the world record in highjump for men?</string>
    <string name="sports_answer_6_1">2,45m</string>
    <string name="sports_answer_6_2">2,42m</string>
    <string name="sports_answer_6_3">2,40m</string>
    <string name="sports_answer_6_4">2,49m</string>
    <string name="sports_correct_answer_6">1</string>
    <string name="question_sports_7">How many times have Brazil won the worlds championship in football?</string>
    <string name="sports_answer_7_1">3</string>
    <string name="sports_answer_7_2">5</string>
    <string name="sports_answer_7_3">7</string>
    <string name="sports_answer_7_4">9</string>
    <string name="sports_correct_answer_7">2</string>
    <string name="question_sports_8">Which NHL hockey club Henrik Lundqvist go to?</string>
    <string name="sports_answer_8_1">Ottawa Senators</string>
    <string name="sports_answer_8_2">Detroit Red Wings</string>
    <string name="sports_answer_8_3">New York Rangers</string>
    <string name="sports_answer_8_4">Calgary Flames</string>
    <string name="sports_correct_answer_8">3</string>
    <string name="question_sports_9">In what year was the summer olympic games in Sweden?</string>
    <string name="sports_answer_9_1">1908</string>
    <string name="sports_answer_9_2">1912</string>
    <string name="sports_answer_9_3">1916</string>
    <string name="sports_answer_9_4">1920</string>
    <string name="sports_correct_answer_9">2</string>
    <string name="question_sports_10">In what year was the athletics world championship in Gothenburg?</string>
    <string name="sports_answer_10_1">1992</string>
    <string name="sports_answer_10_2">1993</string>
    <string name="sports_answer_10_3">1994</string>
    <string name="sports_answer_10_4">1995</string>
    <string name="sports_correct_answer_10">4</string>
    <string name="question_music_1">In which country was Cliff Richard born in?</string>
    <string name="music_answer_1_1">England</string>
    <string name="music_answer_1_2">Ireland</string>
    <string name="music_answer_1_3">India</string>
    <string name="music_answer_1_4">USA</string>
    <string name="music_correct_answer_1">3</string>
    <string name="question_music_2">What is Alice Cooper\'s real name?</string>
    <string name="music_answer_2_1">Robert Smith</string>
    <string name="music_answer_2_2">David Hammich</string>
    <string name="music_answer_2_3">Mich Hammond</string>
    <string name="music_answer_2_4">Vincent Furnier</string>
    <string name="music_correct_answer_2">4</string>
    <string name="question_music_3">In which year was the group ABBA created?</string>
    <string name="music_answer_3_1">1971</string>
    <string name="music_answer_3_2">1972</string>
    <string name="music_answer_3_3">1973</string>
    <string name="music_answer_3_4">1974</string>
    <string name="music_correct_answer_3">2</string>
    <string name="question_music_4">From what country does ACDC originate?</string>
    <string name="music_answer_4_1">USA</string>
    <string name="music_answer_4_2">Belgium</string>
    <string name="music_answer_4_3">Austria</string>
    <string name="music_answer_4_4">Australia</string>
    <string name="music_correct_answer_4">4</string>
    <string name="question_music_5">Which country won Eurovision song contest 1985?</string>
    <string name="music_answer_5_1">Norway</string>
    <string name="music_answer_5_2">Sweden</string>
    <string name="music_answer_5_3">Denmark</string>
    <string name="music_answer_5_4">England</string>
    <string name="music_correct_answer_5">1</string>
    <string name="question_music_6">Who wrote the song Moonlight Shadow?</string>
    <string name="music_answer_6_1">Mick Jagger</string>
    <string name="music_answer_6_2">Elton John</string>
    <string name="music_answer_6_3">Mike Oldfield</string>
    <string name="music_answer_6_4">Céline Dion</string>
    <string name="music_correct_answer_6">3</string>
    <string name="question_music_7">In what year was the album Dark Side of The Moon released?</string>
    <string name="music_answer_7_1">1972</string>
    <string name="music_answer_7_2">1969</string>
    <string name="music_answer_7_3">1970</string>
    <string name="music_answer_7_4">1973</string>
    <string name="music_correct_answer_7">4</string>
    <string name="question_music_8">In what year did the singer Donna Summer die?</string>
    <string name="music_answer_8_1">2008</string>
    <string name="music_answer_8_2">2012</string>
    <string name="music_answer_8_3">2010</string>
    <string name="music_answer_8_4">2014</string>
</resources>