<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.iths.asobi.CustomQuestionAddActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/custom_question_add_activity_text"
        android:text="@string/add_question_title"
        android:textSize="30sp"
        android:textColor="@color/colorPrimary"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/question_title"
            android:textSize="30sp"/>
        <EditText
            android:id="@+id/custom_question"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/add_questions_title"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/answers_title"
            android:textSize="30sp"/>
        <EditText
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/alternative_1"
            android:id="@+id/alternative_one"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <EditText
            android:layout_marginLeft="142dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/alternative_2"
            android:id="@+id/alternative_two"/>
        <EditText
            android:id="@+id/alternative_three"
            android:layout_marginLeft="142dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/alternative_3"
            android:layout_below="@id/alternative_two"
            />
        <EditText
            android:layout_marginLeft="142dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/alternative_4"
            android:layout_below="@id/alternative_three"
            android:id="@+id/alternative_four"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/right_answer"
            android:textSize="30sp"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_text"/>
        <EditText
            android:id="@+id/right_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>
    </LinearLayout>

    <Button
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_button_text"
        android:onClick="addCustomQuestion"/>

</LinearLayout>